# llm-agent-research

./: README.md  pyproject.toml  requirements.txt
app/: research_assistant.py
app/agent/: research_agent.py
app/config/: settings.py
app/db/: cache.py
app/llm/: ollama_client.py  openai_client.py  response.py
app/tools/: web_scrape_tool.py  web_search_tool.py
