[project]
name = "research-assistant"
version = "0.1.0"
description = "Research topics on the internet using AI agentic search"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10"

[tool.black]
line-length = 100

[tool.ruff]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.mypy]
strict = true
